--- a/Makefile.mgw
+++ b/Makefile.mgw
@@ -3,16 +3,16 @@
 # set up compiler and options
 CC = gcc
 CFLAGS = -O3 -pipe
-LDFLAGS = -lpthreadGC2
-EXECUTABLE = sloppy
+LDFLAGS = 
+EXECUTABLE = sloppy.exe
 
 NAME = Sloppy
 DEBUGLEVEL = 1
-DEFS = -DAPP_NAME='"$(NAME)"' -DDEBUG_LEVEL=$(DEBUGLEVEL)
+DEFS = -DAPP_NAME='"$(NAME)"' -DDEBUG_LEVEL=$(DEBUGLEVEL) -DUSE_THREADS
 
 OBJS = avltree.o bench.o chess.o debug.o egbb.o eval.o hash.o main.o \
        notation.o game.o input.o makemove.o pgn.o book.o magicmoves.o \
-       movegen.o perft.o search.o util.o xboard.o
+       movegen.o perft.o search.o thread.o util.o xboard.o
 
 .c.o:
 	$(CC) -std=gnu99 -c -Wall -pedantic $(CFLAGS) $< $(DEFS)
