--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@ sloppy
 sloppy.exe
 *.o
 *.obj
+
+# MSVC-generated files
+*.pdb
+
+# KDevelop's files
+Doxyfile
+sloppy.kdevelop
+sloppy.kdevelop.filelist
+sloppy.kdevelop.pcs
+sloppy.kdevses
+
