Support the "egtpath" Xboard command

--- a/sloppy.conf
+++ b/sloppy.conf
@@ -12,13 +12,17 @@ egbb_5men = off
 # smart: load a smart selection of bitbases to RAM
 # none: load nothing to RAM
 # off: disable bitbases completely
-egbb_load_type = 4men
+#
+# Note: even if this option is set off, Xboard can still
+# tell Sloppy to load the bitbases with the egtpath command.
+egbb_load_type = off
 
 # Endgame bitbase cache size in megabytes
 egbb_cache = 4
 
 # Endgame bitbase path
-egbb_path = bitbases
+# Leave this empty if you want Xboard to set the path
+# egbb_path = bitbases
 
 # Book mode (disk/mem/off)
 bookmode = mem
