--- a/src/Makefile
+++ b/src/Makefile
@@ -7,9 +7,8 @@ LDFLAGS = -lpthread -ldl
 EXECUTABLE = sloppy
 GIT_REV = $(shell git rev-parse --short HEAD)
 
-NAME = Sloppy
 DEBUGLEVEL = 1
-DEFS = -DAPP_NAME='"$(NAME)"' -DGIT_REV='"$(GIT_REV)"' -DDEBUG_LEVEL=$(DEBUGLEVEL) -DUSE_THREADS
+DEFS = -DGIT_REV='"$(GIT_REV)"' -DDEBUG_LEVEL=$(DEBUGLEVEL) -DUSE_THREADS
 
 OBJS = avltree.o bench.o chess.o debug.o egbb.o eval.o hash.o main.o \
        notation.o game.o input.o makemove.o pgn.o book.o magicmoves.o \
