--- a/src/Makefile.mgw
+++ b/src/Makefile.mgw
@@ -2,7 +2,7 @@
 
 # set up compiler and options
 CC = cc
-CFLAGS = -O3 -pipe
+CFLAGS = -O3 -pipe -Wall -pedantic
 LDFLAGS = 
 EXECUTABLE = sloppy.exe
 
@@ -14,7 +14,7 @@ OBJS = avltree.o bench.o chess.o debug.o egbb.o eval.o hash.o main.o \
        movegen.o perft.o search.o thread.o util.o xboard.o
 
 .c.o:
-	$(CC) -std=gnu99 -c -Wall -pedantic $(CFLAGS) $< $(DEFS)
+	$(CC) -std=gnu99 -c $(CFLAGS) $< $(DEFS)
 
 all: $(OBJS)
 	$(CC) $(OBJS) -o $(EXECUTABLE) $(LDFLAGS)
