--- a/src/Makefile
+++ b/src/Makefile
@@ -5,10 +5,9 @@ CC = cc
 CFLAGS = -O3 -pipe -mtune=generic -Wall -pedantic
 LDFLAGS = -lpthread -ldl
 EXECUTABLE = sloppy
-GIT_REV = $(shell git rev-parse --short HEAD)
 
 DEBUGLEVEL = 1
-DEFS = -DGIT_REV='"$(GIT_REV)"' -DDEBUG_LEVEL=$(DEBUGLEVEL) -DUSE_THREADS
+DEFS = -DDEBUG_LEVEL=$(DEBUGLEVEL) -DUSE_THREADS
 
 OBJS = avltree.o bench.o chess.o debug.o egbb.o eval.o hash.o main.o \
        notation.o game.o input.o makemove.o pgn.o book.o magicmoves.o \
